[package]
name = "grid"
version = "0.1.0"
authors = ["joshua postel <jpostel@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
rand = "0.7"
ndarray = "0.13"
itertools = "0.8"
termion = "1.5"
prettytable-rs = "0.8"
rodio = "0.10"
